--- a/index.html
+++ b/index.html
@@ -4,11 +4,88 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SD FOAM INDUSTRIES</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #f8f9fa, #e0eafc);
+      color: #333;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .logo {
+      width: 150px;
+      margin-top: 30px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #6a1b9a;
+      margin-top: 20px;
+    }
+
+    p {
+      font-size: 1.1rem;
+      max-width: 700px;
+      margin: 10px auto;
+      line-height: 1.6;
+    }
+
+    .section {
+      margin-top: 40px;
+    }
+
+    .whatsapp-button {
+      position: fixed;
+      bottom: 20px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      background-color: #25D366;
+      color: white;
+      font-size: 28px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    .whatsapp-button.first {
+      right: 90px;
+    }
+
+    .whatsapp-button.second {
+      right: 20px;
+    }
+
+    .footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #777;
+    }
+  </style>
 </head>
 <body>
+  <img src="https://raw.githubusercontent.com/sdfoamindustries/sdfoamindustries.github.io/main/SD%20LOGO.jpeg" alt="SD FOAM Logo" class="logo" />
+
   <h1>Welcome to SD FOAM INDUSTRIES</h1>
   <p>A trusted name in comfort and durability.</p>
-  <p>We manufacture PU Foam, Bonded Foam & Mattresses.</p>
+  <p>We manufacture PU Foam, Bonded Foam, Mattresses, and Fibre Pillows.</p>
   <p>Quality, Durability & Timely Delivery Guaranteed.</p>
+
+  <div class="section">
+    <h2>🛏️ Mattress MRP</h2>
+    <p><em>Our detailed MRP list will be updated here soon.</em></p>
+  </div>
+
+  <!-- WhatsApp Buttons -->
+  <a class="whatsapp-button first" href="https://wa.me/918950496914" target="_blank" title="Chat on WhatsApp - Number 1">💬</a>
+  <a class="whatsapp-button second" href="https://wa.me/918571042210" target="_blank" title="Chat on WhatsApp - Number 2">💬</a>
+
+  <div class="footer">
+    &copy; 2025 SD FOAM INDUSTRIES. All rights reserved.
+  </div>
 </body>
 </html>
