--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
   <!-- WhatsApp Buttons -->
   <a class="whatsapp-button first" href="https://wa.me/918950496914" target="_blank" title="Chat on WhatsApp - Number 1">💬</a>
   <a class="whatsapp-button second" href="https://wa.me/918571042210" target="_blank" title="Chat on WhatsApp - Number 2">💬</a>
-
+  <a class="whatsapp-button second" href="https://wa.me/918368926021" target="_blank" title="Chat on WhatsApp - Number 2">💬</a>
+ 
   <div class="footer">
     &copy; 2025 SD FOAM INDUSTRIES. All rights reserved.
   </div>
