--- a/index.html
+++ b/index.html
@@ -53,10 +53,14 @@
     }
 
     .whatsapp-button.first {
-      right: 90px;
+      right: 160px;
     }
 
     .whatsapp-button.second {
+      right: 90px;
+    }
+
+    .whatsapp-button.third {
       right: 20px;
     }
 
@@ -68,7 +72,7 @@
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/sdfoamindustries/sdfoamindustries.github.io/main/SD%20LOGO.jpeg" alt="SD FOAM Logo" class="logo" />
+  <img src="logo.jpg" alt="SD FOAM Logo" class="logo" />
 
   <h1>Welcome to SD FOAM INDUSTRIES</h1>
   <p>A trusted name in comfort and durability.</p>
@@ -81,12 +85,13 @@
   </div>
 
   <!-- WhatsApp Buttons -->
-  <a class="whatsapp-button first" href="https://wa.me/918950496914" target="_blank" title="Chat on WhatsApp - Number 1">💬</a>
-  <a class="whatsapp-button second" href="https://wa.me/918571042210" target="_blank" title="Chat on WhatsApp - Number 2">💬</a>
-  <a class="whatsapp-button second" href="https://wa.me/918368926021" target="_blank" title="Chat on WhatsApp - Number 2">💬</a>
- 
+  <a class="whatsapp-button first" href="https://wa.me/918950496914" target="_blank" title="Chat on WhatsApp - 89504-96914">💬</a>
+  <a class="whatsapp-button second" href="https://wa.me/918571042210" target="_blank" title="Chat on WhatsApp - 85710-42210">💬</a>
+  <a class="whatsapp-button third" href="https://wa.me/918368926021" target="_blank" title="Chat on WhatsApp - 83689-26021">💬</a>
+
   <div class="footer">
     &copy; 2025 SD FOAM INDUSTRIES. All rights reserved.
   </div>
 </body>
 </html>
+
