--- a/index.html
+++ b/index.html
@@ -1,34 +1,69 @@
-<!-- WhatsApp Buttons -->
-<a class="whatsapp-button first" href="https://wa.me/918950496914" target="_blank" title="Chat: 89504-96914">💬</a>
-<a class="whatsapp-button second" href="https://wa.me/918571042210" target="_blank" title="Chat: 85710-42210">💬</a>
-<a class="whatsapp-button third" href="https://wa.me/918368926021" target="_blank" title="Chat: 83689-26021">💬</a>
+<!-- WhatsApp Buttons with Proper Labels -->
+<div class="whatsapp-container">
+  <div class="whatsapp-box">
+    <a class="whatsapp-button" href="https://wa.me/918950496914" target="_blank" title="Chat: 8950496914">💬</a>
+    <div class="label">Office</div>
+  </div>
+  <div class="whatsapp-box">
+    <a class="whatsapp-button" href="https://wa.me/918571042210" target="_blank" title="Chat: 8571042210">💬</a>
+    <div class="label">Mr. Deepak Kumar</div>
+  </div>
+  <div class="whatsapp-box">
+    <a class="whatsapp-button" href="https://wa.me/918368926021" target="_blank" title="Chat: 8368926021">💬</a>
+    <div class="label">GM Mr. Dinesh Giri</div>
+  </div>
+</div>
 
 <style>
-  .whatsapp-button.first {
-    right: 160px;
-  }
-  .whatsapp-button.second {
-    right: 90px;
-  }
-  .whatsapp-button.third {
+  .whatsapp-container {
+    position: fixed;
+    bottom: 20px;
     right: 20px;
+    display: flex;
+    gap: 12px;
+    z-index: 1000;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-end;
   }
 
-  /* Mobile view fix */
+  .whatsapp-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .whatsapp-button {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background-color: #25D366;
+    color: white;
+    font-size: 26px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  }
+
+  .label {
+    margin-top: 5px;
+    font-size: 12px;
+    color: #333;
+    text-align: center;
+    max-width: 80px;
+  }
+
   @media (max-width: 480px) {
     .whatsapp-button {
-      width: 50px;
-      height: 50px;
+      width: 48px;
+      height: 48px;
       font-size: 22px;
     }
-    .whatsapp-button.first {
-      right: 120px;
-    }
-    .whatsapp-button.second {
-      right: 65px;
-    }
-    .whatsapp-button.third {
-      right: 10px;
+    .label {
+      font-size: 10px;
+      max-width: 70px;
     }
   }
 </style>
