--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SD FOAM INDUSTRIES</title>
+
+  <!-- ✅ SEO Meta Tags -->
+  <meta name="description" content="SD FOAM INDUSTRIES - PU Foam, Bonded Foam, Mattresses, and Fibre Pillows Manufacturer. Trusted name in comfort and durability.">
+  <meta name="keywords" content="PU Foam, Bonded Foam, Mattresses, Fibre Pillows, Foam Manufacturer, SD FOAM INDUSTRIES">
+  <meta name="author" content="SD FOAM INDUSTRIES">
+
+  <!-- ✅ Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI&display=swap" rel="stylesheet">
+
+  <!-- ✅ Font Awesome for WhatsApp Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
   <style>
     body {
       margin: 0;
@@ -69,7 +84,7 @@
     .whatsapp-icon {
       width: 55px;
       height: 55px;
-      font-size: 28px;
+      font-size: 24px;
       background-color: #25D366;
       color: white;
       border-radius: 50%;
@@ -107,7 +122,7 @@
       .whatsapp-icon {
         width: 48px;
         height: 48px;
-        font-size: 22px;
+        font-size: 20px;
       }
 
       .label {
@@ -118,7 +133,8 @@
 </head>
 <body>
 
-  <img src="logo.jpg" alt="SD FOAM Logo" class="logo" />
+  <!-- ✅ Logo -->
+  <img src="logo.jpg" alt="SD FOAM INDUSTRIES Logo" class="logo" onerror="this.style.display='none'" />
 
   <h1>Welcome to SD FOAM INDUSTRIES</h1>
   <p>A trusted name in comfort and durability.</p>
@@ -134,18 +150,24 @@
     &copy; 2025 SD FOAM INDUSTRIES. All rights reserved.
   </div>
 
-  <!-- WhatsApp Buttons -->
+  <!-- ✅ WhatsApp Contact Buttons -->
   <div class="whatsapp-bar">
     <div class="whatsapp-box">
-      <a href="https://wa.me/918950496914" target="_blank" class="whatsapp-icon" title="Office">💬</a>
+      <a href="https://wa.me/918950496914" target="_blank" class="whatsapp-icon" title="Office">
+        <i class="fab fa-whatsapp"></i>
+      </a>
       <div class="label">Office</div>
     </div>
     <div class="whatsapp-box">
-      <a href="https://wa.me/918571042210" target="_blank" class="whatsapp-icon" title="Mr. Deepak Kumar">💬</a>
+      <a href="https://wa.me/918571042210" target="_blank" class="whatsapp-icon" title="Mr. Deepak Kumar">
+        <i class="fab fa-whatsapp"></i>
+      </a>
       <div class="label">Mr. Deepak Kumar</div>
     </div>
     <div class="whatsapp-box">
-      <a href="https://wa.me/918368926021" target="_blank" class="whatsapp-icon" title="GM Mr. Dinesh Giri">💬</a>
+      <a href="https://wa.me/918368926021" target="_blank" class="whatsapp-icon" title="GM Mr. Dinesh Giri">
+        <i class="fab fa-whatsapp"></i>
+      </a>
       <div class="label">GM Mr. Dinesh Giri</div>
     </div>
   </div>
