--- a/index.html
+++ b/index.html
@@ -1,176 +1,19 @@
- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SD FOAM INDUSTRIES</title>
-
-  <!-- ✅ SEO Meta Tags -->
-  <meta name="description" content="SD FOAM INDUSTRIES - PU Foam, Bonded Foam, Mattresses, and Fibre Pillows Manufacturer. Trusted name in comfort and durability.">
-  <meta name="keywords" content="PU Foam, Bonded Foam, Mattresses, Fibre Pillows, Foam Manufacturer, SD FOAM INDUSTRIES">
-  <meta name="author" content="SD FOAM INDUSTRIES">
-
-  <!-- ✅ Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI&display=swap" rel="stylesheet">
-
-  <!-- ✅ Font Awesome for WhatsApp Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <!-- ✅ Favicon -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #f8f9fa, #e0eafc);
-      color: #333;
-      text-align: center;
-      padding: 20px;
-    }
-
-    .logo {
-      width: 150px;
-      margin-top: 30px;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      color: #6a1b9a;
-      margin-top: 20px;
-    }
-
-    p {
-      font-size: 1.1rem;
-      max-width: 700px;
-      margin: 10px auto;
-      line-height: 1.6;
-    }
-
-    .section {
-      margin-top: 40px;
-    }
-
-    .footer {
-      margin-top: 60px;
-      font-size: 0.9rem;
-      color: #777;
-    }
-
-    /* WhatsApp Section */
-    .whatsapp-bar {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: white;
-      padding: 10px 15px;
-      border-radius: 15px;
-      display: flex;
-      gap: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-      z-index: 999;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .whatsapp-box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 70px;
-    }
-
-    .whatsapp-icon {
-      width: 55px;
-      height: 55px;
-      font-size: 24px;
-      background-color: #25D366;
-      color: white;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      transition: transform 0.2s;
-    }
-
-    .whatsapp-icon:hover {
-      transform: scale(1.1);
-    }
-
-    .label {
-      margin-top: 5px;
-      font-size: 12px;
-      color: #333;
-      text-align: center;
-      line-height: 1.2;
-    }
-
-    @media (max-width: 480px) {
-      .whatsapp-bar {
-        right: 10px;
-        left: 10px;
-        justify-content: space-around;
-      }
-
-      .whatsapp-box {
-        width: 65px;
-      }
-
-      .whatsapp-icon {
-        width: 48px;
-        height: 48px;
-        font-size: 20px;
-      }
-
-      .label {
-        font-size: 10px;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <!-- ✅ Logo -->
-  <img src="logo.jpg" alt="SD FOAM INDUSTRIES Logo" class="logo" onerror="this.style.display='none'" />
-
-  <h1>Welcome to SD FOAM INDUSTRIES</h1>
-  <p>A trusted name in comfort and durability.</p>
-  <p>We manufacture PU Foam, Bonded Foam, Mattresses, and Fibre Pillows.</p>
-  <p>Quality, Durability & Timely Delivery Guaranteed.</p>
-
-  <div class="section">
-    <h2>🛏️ Mattress MRP</h2>
-    <p><em>Our detailed MRP list will be updated here soon.</em></p>
+ <!-- WhatsApp Buttons -->
+<div class="whatsapp-bar">
+  <div class="whatsapp-box">
+    <a href="https://wa.me/918950496914" target="_blank" class="whatsapp-icon" title="Office">💬</a>
+    <div class="label">Office</div>
   </div>
-
-  <div class="footer">
-    &copy; 2025 SD FOAM INDUSTRIES. All rights reserved.
+  <div class="whatsapp-box">
+    <a href="https://wa.me/918571042210" target="_blank" class="whatsapp-icon" title="Mr. Deepak Kumar">💬</a>
+    <div class="label">Mr. Deepak Kumar</div>
   </div>
-
-  <!-- ✅ WhatsApp Contact Buttons -->
-  <div class="whatsapp-bar">
-    <div class="whatsapp-box">
-      <a href="https://wa.me/918950496914" target="_blank" class="whatsapp-icon" title="Office">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <div class="label">Office</div>
-    </div>
-    <div class="whatsapp-box">
-      <a href="https://wa.me/918571042210" target="_blank" class="whatsapp-icon" title="Mr. Deepak Kumar">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <div class="label">Mr. Deepak Kumar</div>
-    </div>
-    <div class="whatsapp-box">
-      <a href="https://wa.me/918368926021" target="_blank" class="whatsapp-icon" title="GM Mr. Dinesh Giri">
-        <i class="fab fa-whatsapp"></i>
-      </a>
-      <div class="label">GM Mr. Dinesh Giri</div>
-    </div>
+  <div class="whatsapp-box">
+    <a href="https://wa.me/918368926021" target="_blank" class="whatsapp-icon" title="GM Mr. Dinesh Giri">💬</a>
+    <div class="label">GM Mr. Dinesh Giri</div>
   </div>
-
-</body>
-</html>
+  <div class="whatsapp-box">
+    <a href="https://wa.me/917347683905" target="_blank" class="whatsapp-icon" title="Mr. Pawan (Sr. Salesman)">💬</a>
+    <div class="label">Mr. Pawan<br>(Sr. Salesman)</div>
+  </div>
+</div>
