--- a/index.html
+++ b/index.html
@@ -1,19 +1,146 @@
- <!-- WhatsApp Buttons -->
-<div class="whatsapp-bar">
-  <div class="whatsapp-box">
-    <a href="https://wa.me/918950496914" target="_blank" class="whatsapp-icon" title="Office">💬</a>
-    <div class="label">Office</div>
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SD FOAM INDUSTRIES</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #f8f9fa, #e0eafc);
+      color: #333;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .logo {
+      width: 150px;
+      margin-top: 30px;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #6a1b9a;
+      margin-top: 20px;
+    }
+
+    p {
+      font-size: 1.1rem;
+      max-width: 700px;
+      margin: 10px auto;
+      line-height: 1.6;
+    }
+
+    .section {
+      margin-top: 40px;
+    }
+
+    .footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #777;
+    }
+
+    /* WhatsApp Section */
+    .whatsapp-bar {
+      position: fixed;
+      bottom: 10px;
+      left: 10px;
+      right: 10px;
+      background: white;
+      padding: 10px;
+      border-radius: 15px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: space-around;
+      align-items: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      z-index: 999;
+    }
+
+    .whatsapp-box {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      gap: 8px;
+      padding: 5px 10px;
+      border-radius: 10px;
+      background-color: #f0f0f0;
+    }
+
+    .whatsapp-icon {
+      width: 45px;
+      height: 45px;
+      font-size: 20px;
+      background-color: #25D366;
+      color: white;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform 0.2s;
+    }
+
+    .whatsapp-icon:hover {
+      transform: scale(1.1);
+    }
+
+    .label {
+      font-size: 13px;
+      text-align: left;
+      line-height: 1.2;
+      color: #333;
+      max-width: 120px;
+    }
+
+    @media (max-width: 480px) {
+      .label {
+        font-size: 12px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <img src="logo.jpg" alt="SD FOAM Logo" class="logo" />
+
+  <h1>Welcome to SD FOAM INDUSTRIES</h1>
+  <p>A trusted name in comfort and durability.</p>
+  <p>We manufacture PU Foam, Bonded Foam, Mattresses, and Fibre Pillows.</p>
+  <p>Quality, Durability & Timely Delivery Guaranteed.</p>
+
+  <div class="section">
+    <h2>🛏️ Mattress MRP</h2>
+    <p><em>Our detailed MRP list will be updated here soon.</em></p>
   </div>
-  <div class="whatsapp-box">
-    <a href="https://wa.me/918571042210" target="_blank" class="whatsapp-icon" title="Mr. Deepak Kumar">💬</a>
-    <div class="label">Mr. Deepak Kumar</div>
+
+  <div class="footer">
+    &copy; 2025 SD FOAM INDUSTRIES. All rights reserved.
   </div>
-  <div class="whatsapp-box">
-    <a href="https://wa.me/918368926021" target="_blank" class="whatsapp-icon" title="GM Mr. Dinesh Giri">💬</a>
-    <div class="label">GM Mr. Dinesh Giri</div>
+
+  <!-- WhatsApp Buttons -->
+  <div class="whatsapp-bar">
+    <div class="whatsapp-box">
+      <a href="https://wa.me/918950496914" target="_blank" class="whatsapp-icon" title="Office">💬</a>
+      <div class="label">Office</div>
+    </div>
+    <div class="whatsapp-box">
+      <a href="https://wa.me/918571042210" target="_blank" class="whatsapp-icon" title="Mr. Deepak Kumar">💬</a>
+      <div class="label">Mr. Deepak Kumar</div>
+    </div>
+    <div class="whatsapp-box">
+      <a href="https://wa.me/918368926021" target="_blank" class="whatsapp-icon" title="GM Mr. Dinesh Giri">💬</a>
+      <div class="label">GM Mr. Dinesh Giri</div>
+    </div>
+    <div class="whatsapp-box">
+      <a href="https://wa.me/917347683905" target="_blank" class="whatsapp-icon" title="Mr. Pawan (Sr. Salesman)">💬</a>
+      <div class="label">Mr. Pawan<br>(Sr. Salesman)</div>
+    </div>
   </div>
-  <div class="whatsapp-box">
-    <a href="https://wa.me/917347683905" target="_blank" class="whatsapp-icon" title="Mr. Pawan (Sr. Salesman)">💬</a>
-    <div class="label">Mr. Pawan<br>(Sr. Salesman)</div>
-  </div>
-</div>
+
+</body>
+</html>
