--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="overlay">
         <header>
             <!-- COMPANY LOGO -->
-            <img src="SD LOGO.jpeg" alt="SD FOAM INDUSTRIES Logo" />
+            <img src="sd-logo.jpeg" alt="SD FOAM INDUSTRIES Logo" />
             <h1>SD FOAM INDUSTRIES</h1>
             <p>Mangala to Sahidawali Road, Village Mangala, Sirsa-125055 (Haryana)</p>
         </header>
@@ -151,25 +151,25 @@
         <!-- Visiting Card -->
         <div class="section">
             <h2>Our Visiting Card</h2>
-            <img src="WhatsApp Image 2025-06-06 at 1.50.19 PM.jpeg" alt="Visiting Card" />
+            <img src="visiting-card.jpeg" alt="Visiting Card" />
         </div>
 
         <!-- Factory / Product Photos -->
         <div class="section">
             <h2>Our Factory & Products</h2>
-            <img src="WhatsApp Image 2025-06-06 at 1.50.37 PM.jpeg" alt="Photo 1" />
-            <img src="WhatsApp Image 2025-06-06 at 1.50.36 PM.jpeg" alt="Photo 2" />
-            <img src="WhatsApp Image 2025-06-06 at 1.50.35 PM (1).jpeg" alt="Photo 3" />
-            <img src="WhatsApp Image 2025-06-06 at 1.50.35 PM.jpeg" alt="Photo 4" />
-            <img src="WhatsApp Image 2025-06-06 at 1.50.33 PM.jpeg" alt="Photo 5" />
-            <img src="WhatsApp Image 2025-06-06 at 1.50.32 PM (1).jpeg" alt="Photo 6" />
-            <img src="WhatsApp Image 2025-06-06 at 1.50.32 PM.jpeg" alt="Photo 7" />
+            <img src="product1.jpeg" alt="Photo 1" />
+            <img src="product2.jpeg" alt="Photo 2" />
+            <img src="product3.jpeg" alt="Photo 3" />
+            <img src="product4.jpeg" alt="Photo 4" />
+            <img src="product5.jpeg" alt="Photo 5" />
+            <img src="product6.jpeg" alt="Photo 6" />
+            <img src="product7.jpeg" alt="Photo 7" />
         </div>
 
         <!-- PDF Download -->
         <div class="section">
             <h2>Download Our Catalogue</h2>
-            <a class="button" href="01 Catalogue (3).pdf" target="_blank">Download PDF</a>
+            <a class="button" href="catalogue.pdf" target="_blank">Download PDF</a>
         </div>
 
         <!-- Contact Form -->
