--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
             <p><i class="fas fa-phone"></i> 8950496914 (Office)</p>
             <p><i class="fas fa-phone"></i> 8571042210 (Mr. Deepak Kumar)</p>
             <p><i class="fas fa-phone"></i> 8368926021 (General Manager Mr. Dinesh Giri)</p>
+            <p><i class="fas fa-phone"></i> 7347683905 (SR SALES MANAGER Mr. Pawan)</p> <!-- UPDATED -->
+        </div>
+
+        <!-- About Us -->
+        <div class="section">
+            <h2>About Us</h2>
+            <p>SD FOAM INDUSTRIES is a leading manufacturer of high-quality foam products based in Sirsa, Haryana. We provide innovative foam solutions for packaging, furniture, bedding, and more. Our focus is on quality, reliability, and customer satisfaction.</p>
         </div>
 
         <!-- Visiting Card -->
