--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <p><i class="fas fa-phone"></i> 8950496914 (Office)</p>
             <p><i class="fas fa-phone"></i> 8571042210 (Mr. Deepak Kumar)</p>
             <p><i class="fas fa-phone"></i> 8368926021 (General Manager Mr. Dinesh Giri)</p>
-            <p><i class="fas fa-phone"></i> 7347683905 (SR SALES MANAGER Mr. Pawan)</p> <!-- UPDATED -->
+            <p><i class="fas fa-phone"></i> 7347683905 (SR SALES MANAGER Mr. Pawan)</p>
         </div>
 
         <!-- About Us -->
